# trope-correlate

./: .gitignore  Cargo.toml  readme.md
doc/: .gitignore  arch.md  def.md  goal.md  index.md  link.md  links.md  paper.md
doc/arch/: index.md
doc/crate/: graph.md  index.md  plotters.md  ui.md
doc/meeting/: 22-11-26.md  22-11-28.md  22-11-29.md  to-discuss.md
trope-download/: .gitignore  Cargo.toml  readme.md  trope-downloader.py
trope-download/src/: arg.rs  download.rs  download_pagelist.rs  download_trope.rs  download_tropelist.rs  error.rs  header.rs  lib.rs  main.rs
trope-download/src/cmd/: download_namespace.rs  download_page.rs  download_pagelist.rs  download_trope.rs  download_tropelist.rs  mod.rs
trope-learn/: Cargo.toml
trope-learn/src/: categorize.rs  error.rs  lib.rs  main.rs  tutorial.rs
trope-lens/: Cargo.toml
trope-lens/src/: categorize.rs  error.rs  lib.rs  main.rs  tutorial.rs
trope-lens/src/cmd/: categorize.rs  mod.rs
trope-lib/: Cargo.toml
trope-lib/src/: arg.rs  blacklist.rs  constant.rs  lib.rs  media.rs  namespace.rs  page_id_lookup.rs  pageid_lookup.rs  path_locator.rs  serialization.rs  trope.rs  util.rs
trope-lib/src/arg/: mod.rs  trope_download.rs  trope_learn.rs  trope_lens.rs  trope_pipeline.rs  trope_scrape.rs  trope_scraper.rs  trope_teach.rs
trope-pipeline/: Cargo.toml
trope-pipeline/src/: lib.rs  main.rs
trope-pipeline/src/cmd/: all_pagelists.rs  all_pages.rs  all_tropelists.rs  mod.rs  namespace_pagelist.rs  namespace_pages.rs  namespace_tropelist.rs
trope-scrape/: Cargo.toml
trope-scrape/src/: error.rs  gen_pageid.rs  lib.rs  main.rs  read_html.rs  scrape.rs  scrape_all_tropes.rs  scrape_pagelist.rs  scrape_trope.rs  scrape_tropelist.rs
trope-scrape/src/cmd/: gen_all_mention_pageids.rs  gen_global_page_ids.rs  gen_global_pageids.rs  gen_mention_page_ids.rs  gen_mention_pageids.rs  generate_page_ids.rs  get_namespace_tot_pages.rs  get_pagelist_len.rs  mod.rs  scrape_all_pages.rs  scrape_all_tropes.rs  scrape_namespace.rs  scrape_page.rs  scrape_pagelist.rs  scrape_trope.rs  scrape_tropelist.rs
trope-scraper/: Cargo.toml
trope-scraper/src/: arg.rs  main.rs  parse_tropelist.rs
trope-teach/: Cargo.toml
trope-teach/src/: categorize.rs  error.rs  lib.rs  main.rs  model.rs  train_params.rs
trope-teach/src/cmd/: categorize.rs  mod.rs  tutorial.rs
trope-web/: Cargo.toml  index.html  readme.md
trope-web/src/: button.rs  main.rs  message.rs  route.rs  tab.rs
trope-web/src/graph/: mod.rs  trope_graph.rs
trope-web/src/plot/: fdg_img_custom.rs  mod.rs  svg_plot.rs
trope-web/src/route/: about.rs  home.rs  method.rs  mod.rs  trope.rs
trope-web/src/style/: index.scss  tab.scss  var.scss
