[workspace]

members = [
  "trope-download",
  "trope-learn",
  "trope-lib",
  "trope-scrape",
  "trope-pipeline",
  "trope-web",
]

[workspace.dependencies]
brotli = "3.3.4"
bytes = "1.3.0"
chrono = "0.4.23"
clap = "4.0.29"
csv = "1.1.6"
derive_more = "0.99.17"
dfdx = "0.10.0"
log = "0.4.17"
once_cell = "1.17.0"
rand = "0.8.5"
regex = "1.7.0"
reqwest = "0.11.13"
scraper = "0.13.0"
serde = "1.0.151"
serde_json = "1.0.89"
simple_logger = "4.0.0"
url = "2.3.1"
