[package]
name = "trope-download"
version = "0.1.0"
edition = "2021"

[lib]
name = "trope_download"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = "3.3.4"
bytes = "1.3.0"
clap = { version = "4.0.29", features = ["derive"] }
csv = "1.1.6"
rand = { version = "0.8.5", features = ["small_rng"] }
reqwest = { version = "0.11.13", features = ["blocking", "cookies"] }
trope-lib = { path = "../trope-lib" }
url = "2.3.1"
