[package]
name = "trope-download"
version = "0.1.0"
edition = "2021"

[lib]
name = "trope_download"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
csv = { workspace = true }
log = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
reqwest = { workspace = true, features = ["blocking", "cookies"] }
trope-lib = { path = "../trope-lib" }
url = { workspace = true }
