[package]
name = "trope-learn"
version = "0.1.0"
edition = "2021"

[lib]
name = "trope_learn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfdx = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
trope-lib = { path = "../trope-lib" }
