[package]
name = "trope-lens"
version = "0.1.0"
edition = "2021"

[lib]
name = "trope_lens"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { workspace = true }
derive_more = { workspace = true }
dfdx = { workspace = true }
log = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
serde = { workspace = true }
simple_logger = { workspace = true, features = ["stderr"] }
trope-lib = { path = "../trope-lib" }
