[package]
name = "trope-scrape"
version = "0.1.0"
edition = "2021"

[lib]
name = "trope_scrape"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = "3.3.4"
clap = { version = "4.0.29", features = ["derive"] }
csv = "1.1.6"
rand = "0.8.5"
regex = "1.7.0"
scraper = "0.13.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
trope-lib = { path = "../trope-lib" }
