[package]
name = "trope-scrape"
version = "0.1.0"
edition = "2021"

[lib]
name = "trope_scrape"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = { workspace = true }
clap = { workspace = true, features = ["derive"] }
csv = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
trope-lib = { path = "../trope-lib" }
