[package]
name = "trope-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = "3.3.4"
clap = { version = "4.0.29", features = ["derive"] }
csv = "1.1.6"
scraper = "0.13.0"
trope-lib = { path = "../trope-lib" }
