[package]
name = "trope-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { workspace = true }
fdg-sim = "0.9.0"
gloo-timers = "0.2.5"
js-sys = "0.3.60"
log = { workspace = true }
petgraph = "0.6.2"
plotters = "0.3.4"
simple_logger = { workspace = true, features = ["stderr"] }
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["Element", "SvgElement"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
